src/test/ui/higher-rank-trait-bounds/normalize-under-binder/issue-70120.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/issue-70120.rs:26:5
   |
LL |     meow(struc, |foo| {
   |     ^^^^        ----- found signature of `for<'r> fn(&'r usize) -> _`
   |     |
   |     expected signature of `for<'any2> fn(<MyStruct as MyTrait<'any2>>::Output) -> _`
   |
note: required by a bound in `meow`
  --> $DIR/issue-70120.rs:18:8
   |
LL | fn meow<T, F>(t: T, f: F)
   |    ---- required by a bound in this
...
LL |     F: for<'any2> Fn(<T as MyTrait<'any2>>::Output),
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `meow`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0631`.
